javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/ArrayCreator.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

import java.lang.String;
import java.util.ArrayList;
import java.util.List;

public class ArrayCreator {
  List<String> s = new ArrayList[10];
}
